@@ -5,7 +5,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -14,6 +13,7 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.rudi.facet.organization.bean.Organization;
 import org.rudi.facet.organization.bean.OrganizationMember;
 import org.rudi.facet.organization.bean.OrganizationRole;
+import org.rudi.facet.organization.bean.OrganizationStatus;
 import org.rudi.facet.organization.bean.PagedOrganizationList;
 import org.rudi.facet.organization.helper.exceptions.AddUserToOrganizationException;
 import org.rudi.facet.organization.helper.exceptions.GetOrganizationException;
@@ -62,7 +62,7 @@ public class OrganizationHelper {
 		}
 		return members.stream().anyMatch(member ->
 				member.getUserUuid().equals(userUuid)
-				&& member.getRole().equals(OrganizationRole.ADMINISTRATOR)
+						&& member.getRole().equals(OrganizationRole.ADMINISTRATOR)
 		);
 	}
 
@@ -125,9 +125,14 @@ public class OrganizationHelper {
 	}
 
 	@Nonnull
-	public PagedOrganizationList searchOrganizations(Integer offset, Integer limit, String order) throws GetOrganizationException {
+	public PagedOrganizationList searchOrganizations(UUID uuid, String name, Boolean active, UUID userUuid,OrganizationStatus organizationStatus, Integer offset, Integer limit, String order) throws GetOrganizationException {
 		final var mono = organizationWebClient.get()
 				.uri(uriBuilder -> uriBuilder.path(organizationProperties.getOrganizationsPath())
+						.queryParamIfPresent("uuid", Optional.ofNullable(uuid))
+						.queryParamIfPresent("name", Optional.ofNullable(name))
+						.queryParamIfPresent("active", Optional.ofNullable(active))
+						.queryParamIfPresent("user_uuid", Optional.ofNullable(userUuid))
+						.queryParamIfPresent("organization_status", Optional.ofNullable(organizationStatus))
 						.queryParam("offset", offset)
 						.queryParam("limit", limit)
 						.queryParam("order", order)
@@ -146,7 +151,7 @@ public class OrganizationHelper {
 		int offset = 0;
 		long total;
 		do {
-			PagedOrganizationList organizationsPage = searchOrganizations(offset, 10, "name");
+			PagedOrganizationList organizationsPage = searchOrganizations(null, null, null, null, null, offset, 10, "name");
 			total = organizationsPage.getTotal();
 			if (CollectionUtils.isNotEmpty(organizationsPage.getElements())) {
 				organizations.addAll(organizationsPage.getElements());
@@ -169,6 +174,6 @@ public class OrganizationHelper {
 			return new ArrayList<>();
 		}
 
-		return page.getElements().stream().map(Organization::getUuid).collect(Collectors.toList());
+		return page.getElements().stream().map(Organization::getUuid).toList();
 	}
 }
